# TSP-and-PTSP-Solver

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.python  Makefile  Numeric tests.Rmd  README.md  Statistical tests.Rmd  Test.Rmd  Test1 HC local   Test_1_HC_Local  Test_1_MCTS_Local  Test_2_Genetic_Local  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  run.py  scores_gen_128.sav  scores_gen_256.sav  scores_hc.sav  scores_hc_ptsp.sav  scores_mct_lottery.sav  scores_mct_nearest.sav  streamlit_app.py  xxxx
.github/agents/: coordinator.agent.md  reviewer.agent.md  writer-go.agent.md  writer-py.agent.md  writer.agent.md
.github/prompts/: plan-goAlgorithmServicesPhasedMigration.prompt.md
.ipynb_checkpoints/: Numeric tests-checkpoint.Rmd  Statistical tests-checkpoint.Rmd  Test-checkpoint.Rmd  Untitled-checkpoint.Rmd
TSP_PTSP_solver/: settings.py  urls.py  wsgi.py
analytics/ptsp/: main_ptsp.py
analytics/ptsp/genetic/: genetic_order.py  genetic_trajectory.py
analytics/ptsp/mcts/: mct_order.py  node_order.py  node_steerage.py
analytics/tsp/: main_tsp.py
frontend/: api_client.py  graph_generator.py  visualizer.py
go-worker/: Dockerfile  main.go
monitoring/prometheus/: prometheus.yml
results/: scores_gen_128.sav  scores_gen_256.sav  scores_gen_ptsp.sav  scores_hc.sav  scores_mct_lottery.sav  scores_mct_nearest.sav  scores_mcts_ptsp.sav
services/api/: Dockerfile.python  run.py
services/frontend/: Dockerfile  streamlit_app.py
src/app/: config.py  jobs.py  main.py  routes_tsp.py  schemas.py  services.py
static/css/: baseStyle.css
static/ptsp_jsons/: test.json
static/tsp_jsons/: test.json  test2.json  test3.json
tests/: conftest.py  test_app.py  test_frontend_async_jobs.py  test_go_executor_routing.py  test_tsp.py
tsp_ptsp_app/: apps.py  connector.py  utils.py
tsp_ptsp_app/templates/: base.html  home.html
tsp_ptsp_app/views/: __init__.py  other_views.py  ptsp_views.py  tsp_views.py
(+85 files in other folders)
