[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsp-ptsp-solver"
version = "2.0.0"
description = "TSP and PTSP solver using FastAPI with genetic algorithms, hill climbing, and MCTS"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Admin" }
]
keywords = ["tsp", "ptsp", "genetic-algorithm", "mcts", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "python-multipart>=0.0.6",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "mypy>=1.5.0",
    "ruff>=0.11.0",
    "httpx>=0.25.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.isort]
known-first-party = ["app", "analytics", "helpers"]

[tool.setuptools.packages.find]
where = ["services/api"]
include = ["app*", "analytics*"]

[tool.pytest.ini_options]
testpaths = ["services/api/tests"]
pythonpath = ["services/api"]
